--- a/src/main/resources/jeesite.properties
+++ b/src/main/resources/jeesite.properties
@@ -12,9 +12,10 @@
 #mysql database setting
 jdbc.type=mysql
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/jeesite?useUnicode=true&characterEncoding=utf-8
-jdbc.username=root
+jdbc.url=jdbc:mysql://192.168.0.75:3306/jeesite?useUnicode=true&characterEncoding=utf-8
+jdbc.username=jeesite
 jdbc.password=123456
+
 
 #mssql database settings
 #jdbc.type=mssql
@@ -108,7 +109,10 @@ cas.project.url=http://127.0.0.1:8080/jeesite
 
 #\u5de5\u4f5c\u6d41\u8bbe\u7f6e
 activiti.isSynActivitiIndetity=false
-activiti.export.diagram.path=c:/activiti_diagram
+
+#activiti.export.diagram.path=c:/activiti_diagram
+activiti.export.diagram.path=activiti_diagram
+
 #activiti font (windows font: \u5b8b\u4f53  linux font: simsun)
 activiti.diagram.activityFontName=\u5b8b\u4f53
 activiti.diagram.labelFontName=\u5b8b\u4f53
