--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -9,8 +9,8 @@ log4j.appender.Console.layout.ConversionPattern=%d %-5p [%c{5}] - %m%n
 #RollingFile
 log4j.appender.RollingFile=org.apache.log4j.DailyRollingFileAppender
 
-#log4j.appender.RollingFile.File=../logs/jeesite/jeesite.log
-log4j.appender.RollingFile.File=/tmp/jeesite/logs/jeesite.log
+log4j.appender.RollingFile.File=../logs/jeesite/jeesite.log
+#log4j.appender.RollingFile.File=/tmp/jeesite/logs/jeesite.log
 #log4j.appender.RollingFile.File= jeesite.log
 
 
